# wquantiles

./: .travis.yaml  pyproject.toml  tox.ini  wquantiles.py
.github/workflows/: codeql-analysis.yml  codeql.yaml  pytest.yaml  ruff.yaml
docs/: conf.py
tests/: test_weighted.py  test_wquantiles.py
wquantiles/: __init__.py
