[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wquantiles"
version = "0.6"
description = "Weighted quantiles, including weighted median, based on numpy"
authors = [
    { name = "Jose Sabater", email  = "jsm@jsabater.info" }
]
license = { file = "LICENSE" }
classifiers = [
    'Programming Language :: Python',
    'Development Status :: 4 - Beta',
    'Natural Language :: English',
    'Environment :: Web Environment',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "polars"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0"
]

[project.urls]
repository = "http://github.com/nudomarinero/wquantiles"

[tool.setuptools.packages.find]
include = ["wquantiles"]
